Update course copy UX

--- a/lang/en.json
+++ b/lang/en.json
@@ -33,7 +33,6 @@
   "app.assetmanagement": "Asset Management",
   "app.assetpreviewinstruction": "Select an asset to see a preview here",
   "app.assetsize": "Size",
-  "app.componentcopyerror": "Cannot copy component, there are no free locations",
   "app.assettitle": "Asset title",
   "app.atversion": "Installed Version",
   "app.autofill": "Autofill",
@@ -60,6 +59,9 @@
   "app.class": "Classes",
   "app.clicktodelete": "Click to delete",
   "app.clicktoedit": "Click to edit",
+  "app.clonecourseinstruction": "Enter a name for the copied course",
+  "app.clonecoursesuccess": "Course cloned successfully",
+  "app.clonecoursetitle": "Copy course",
   "app.collapseAllArticles": "Collapse all articles",
   "app.collapsearticle": "Collapse article",
   "app.colourclear": "Clear colour",
