Switch to internal toast code

--- a/lang/en.json
+++ b/lang/en.json
@@ -63,6 +63,7 @@
   "app.clonecourseinstruction": "Enter a name for the copied course",
   "app.clonecoursesuccess": "Course cloned successfully",
   "app.clonecoursetitle": "Copy course",
+  "app.close": "Close",
   "app.collapseAllArticles": "Collapse all articles",
   "app.collapsearticle": "Collapse article",
   "app.colourclear": "Clear colour",
