Set up session persistence

--- a/lang/en.json
+++ b/lang/en.json
@@ -332,7 +332,7 @@
   "app.projectsettings": "Project settings",
   "app.recent": "Recent",
   "app.refresh": "Refresh",
-  "app.rememberme": "Remember me",
+  "app.rememberme": "Keep me logged in",
   "app.remove": "Remove",
   "app.removeasset": "Remove Asset",
   "app.removeexternalasset": "Remove External Asset",
